fix: cancel button in trade component
notes:

* refactor: trade component template/sass styling
* todo: trade component gets cut off when screen is zoomed in, large refactor can revisit later
* #295

--- a/client/src/stylesheets/gamedashboard/bottom/containers/ContainerTrade.scss
+++ b/client/src/stylesheets/gamedashboard/bottom/containers/ContainerTrade.scss
@@ -33,12 +33,17 @@
   }
 
   .trade-list {
+    margin-left: 0.5rem;
     height: 100%;
-    overflow-y: scroll;
-    @include disable-scroll;
-    background-color: $space-white-opaque-1;
     min-height: 0;
     flex: 1 1 0;
-    margin-left: 0.5rem;
+    background-color: $space-white-opaque-1;
+    overflow-y: scroll;
+    @include disable-scroll;
+
+    .trades-wrapper {
+      margin: 0 0.5rem;
+      background-color: blue;
+    }
   }
 }
